# ddre-tim

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json  typecheck_output.txt
.github/: TCTBP Agent.md  TCTBP Cheatsheet.md  TCTBP.json  TCTBP_STATE.json  copilot-instructions.md
.github/prompts/: Install TCTBP Agent Infrastructure Into Another Repository.prompt.md
apps/api/: package.json
apps/api/src/: activityEvents.ts  dashboard.ts  data.ts  index.ts  localState.ts  server.ts  settings.ts
apps/desktop/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: autostart.rs  commands.rs  lib.rs  main.rs  outbox.rs  tray.rs
apps/web/: README.md  index.html  package.json  vite.config.ts
docs/: architecture.md  database-schema.md  development-setup.md  gnome-tray-validation.md  platform-support.md  product-workflow.md  runtime-deployment.md  workflow.md
docs/adr/: 0001-desktop-stack.md  0002-write-path-and-sync.md  0003-office-hosted-runtime-target.md
infra/: docker-compose.yml
infra/seeds/: ken-boyle-historical-tim-records.json
infra/sql/: 001_initial_schema.sql  002_user_settings_snapshots.sql  003_activity_repository_entries.sql  010_seed_ken_boyle_historical.sql
scripts/: generate-historical-seed-sql.ts  import-tim-records.ts  install-local-gnome-runtime.sh  start-local-runtime-trial.sh  start-local-runtime.sh  validate-dev-db.ts
scripts/lib/: historical-seed-sql.ts
(+9 files in other folders)
