[package]
name = "ddre-desktop"
version = "0.2.0"
description = "Time in Motion Cinnamon-first desktop host"
edition = "2021"

[lib]
name = "ddre_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
time = { version = "0.3", features = ["formatting"] }

[patch.crates-io]
libappindicator = { path = "vendor/libappindicator" }
